[gd_scene load_steps=5 format=3 uid="uid://dqh3pydl6x7xg"]

[ext_resource type="PackedScene" uid="uid://d2rnxi0f7fa63" path="res://strato_defense/gun/main_gun.tscn" id="1_5khlk"]
[ext_resource type="Script" uid="uid://bwanfcewuyagy" path="res://strato_defense/strato_defense.gd" id="1_mwui4"]
[ext_resource type="PackedScene" uid="uid://8gcq6h5iy6pp" path="res://strato_defense/level/level.tscn" id="2_yah1x"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mwui4"]
b = Vector2(0, 512)

[node name="StratoDefense" type="CanvasLayer"]
script = ExtResource("1_mwui4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.0784314, 1)

[node name="Level" parent="." instance=ExtResource("2_yah1x")]
position = Vector2(0, 48)

[node name="Borders" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders"]
position = Vector2(-192, 0)
shape = SubResource("SegmentShape2D_mwui4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders"]
position = Vector2(1152, 0)
shape = SubResource("SegmentShape2D_mwui4")

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[node name="Guns" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="MainGunLeft" parent="Guns" instance=ExtResource("1_5khlk")]
unique_name_in_owner = true
position = Vector2(32, 368)
gun_position = "LEFT_TOWER"

[node name="MainGunMiddle" parent="Guns" instance=ExtResource("1_5khlk")]
unique_name_in_owner = true
position = Vector2(480, 344)
gun_position = "MIDDLE_TOWER"

[node name="MainGunRight" parent="Guns" instance=ExtResource("1_5khlk")]
unique_name_in_owner = true
position = Vector2(928, 368)
gun_position = "RIGHT_TOWER"

[node name="EnemiesContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="SpawnpointLeft" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-126, 80)

[node name="SpawnpointRight" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1090, 80)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]

[editable path="Level"]
